smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-list4.smithy
// Parse error at line 3, column 19 near `[`: Unexpected EOF
namespace com.foo
@tags([[[[[[[[[[[[
